; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_priolist.c_nn_priolist_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_priolist.c_nn_priolist_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_priolist = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@NN_PRIOLIST_SLOTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_priolist_term(%struct.nn_priolist* %0) #0 {
  %2 = alloca %struct.nn_priolist*, align 8
  %3 = alloca i32, align 4
  store %struct.nn_priolist* %0, %struct.nn_priolist** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %17, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @NN_PRIOLIST_SLOTS, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %20

8:                                                ; preds = %4
  %9 = load %struct.nn_priolist*, %struct.nn_priolist** %2, align 8
  %10 = getelementptr inbounds %struct.nn_priolist, %struct.nn_priolist* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @nn_list_term(i32* %15)
  br label %17

17:                                               ; preds = %8
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %3, align 4
  br label %4

20:                                               ; preds = %4
  ret void
}

declare dso_local i32 @nn_list_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
